# b0tul

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  compose.yaml  main.Dockerfile  pyproject.toml  settings.toml
src/telegram_bot/: main.py
src/telegram_bot/helpers/: answers_data.py  job_data.py  logger.py  user_data.py  user_profile_data.py
src/telegram_bot/llm/: my_ollama.py
src/telegram_bot/llm/prompts/: cover_letter.py  revision_cover_letter.py
src/telegram_bot/parsers/: djinni.py  models.py
